fixed overflow issue on large tables

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,3 +67,8 @@
 
   color: #0000EE !important ; 
 }
+
+.tableContainer{
+  max-width: 100%;
+  overflow-x: auto;
+}
